--- a/Lova/Presentation.csproj
+++ b/Lova/Presentation.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <None Remove="Views\Resource\Icons\Login.ico" />
     <None Remove="Views\Resource\Icons\Password.ico" />
+    <None Remove="Views\Resource\Image\NewPage.png" />
     <None Remove="Views\Resource\Image\User0.png" />
     <None Remove="Views\Resource\Image\User1.png" />
     <None Remove="Views\Resource\Image\User2.png" />
@@ -39,6 +40,7 @@
   <ItemGroup>
     <Resource Include="Views\Resource\Icons\Login.ico" />
     <Resource Include="Views\Resource\Icons\Password.ico" />
+    <Resource Include="Views\Resource\Image\NewPage.png" />
     <Resource Include="Views\Resource\Image\User0.png" />
     <Resource Include="Views\Resource\Image\User1.png" />
     <Resource Include="Views\Resource\Image\User2.png" />
