--- a/Lova/Presentation.csproj
+++ b/Lova/Presentation.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Views\Resource\Cursor\cat.ani" />
     <None Remove="Views\Resource\Icons\Login.ico" />
     <None Remove="Views\Resource\Icons\Password.ico" />
     <None Remove="Views\Resource\Image\NewPage.png" />
@@ -39,6 +40,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Views\Resource\Cursor\cat.ani" />
     <Resource Include="Views\Resource\Icons\Login.ico" />
     <Resource Include="Views\Resource\Icons\Password.ico" />
     <Resource Include="Views\Resource\Image\NewPage.png" />
